--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,9 +62,11 @@
     <Compile Include="Assets\scripts\CameraFollower.cs" />
     <Compile Include="Assets\scripts\CoinSpawner.cs" />
     <Compile Include="Assets\scripts\Controller.cs" />
+    <Compile Include="Assets\scripts\FollowThePath.cs" />
     <Compile Include="Assets\scripts\GroundSpawner.cs" />
     <Compile Include="Assets\scripts\PickupCoin.cs" />
     <Compile Include="Assets\scripts\PlatformSpawner.cs" />
+    <Compile Include="Assets\scripts\Rotator.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
@@ -82,6 +84,7 @@
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Sprite.shader" />
+    <None Include="Assets\Sprites\animations.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/dagmara/RiderProjects/Princess/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
