--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Assets\scripts\CameraFollower.cs" />
     <Compile Include="Assets\scripts\CoinSpawner.cs" />
     <Compile Include="Assets\scripts\Controller.cs" />
+    <Compile Include="Assets\scripts\EnemySpawner.cs" />
     <Compile Include="Assets\scripts\FollowThePath.cs" />
     <Compile Include="Assets\scripts\GroundSpawner.cs" />
     <Compile Include="Assets\scripts\PickupCoin.cs" />
